<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="warehouse.fh_muenster.de.warehouse.AdminActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:id="@+id/admin_article_label"
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:text="@string/admin_text_change" />

            </TableRow>

            <TableRow android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/admin_article_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/admin_hint_code"></EditText>
            </TableRow>

            <TableRow android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/admin_article_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/admin_hint_name"></EditText>
            </TableRow>

            <TableRow android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/admin_article_lagerort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/admin_hint_location"></EditText>
            </TableRow>

            <TableRow android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/admin_article_save"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/admin_button_save" />
            </TableRow>

            <TableRow android:layout_marginBottom="15dp">

                <ImageButton
                    android:id="@+id/admin_article_scann"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera" />
            </TableRow>

        </TableLayout>


    </ScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/admin_text_headline"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#454545" />
</RelativeLayout>
