<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="warehouse.fh_muenster.de.warehouse.LoginActivity"
    android:scaleType="centerCrop"
    android:background="@mipmap/bg2">


    <EditText
        android:id="@+id/mitarbeiterNr_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/login_btn"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/loginActivity_personnelId"
        android:inputType="number" />


    <EditText
        android:id="@+id/password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mitarbeiterNr_txt"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="122dp"
        android:layout_weight="0.25"
        android:ems="10"
        android:hint="@string/loginActivity_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_txt"
        android:layout_gravity="bottom"
        android:layout_marginTop="52dp"
        android:text="@string/loginActivity_button_login"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/loginScann_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_txt"
        android:layout_alignRight="@+id/password_txt"
        android:layout_alignTop="@+id/mitarbeiterNr_txt"
        android:src="@android:drawable/ic_menu_camera"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Warehouser"
        android:id="@+id/textView4"
        android:layout_above="@+id/loginScann_btn"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
